--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "@types/sequelize": "^4.28.20",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.1",
+    "sequelize-cli": "^6.6.2",
     "typescript": "^5.4.5"
   }
 }
