--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@mui/material": "^5.15.18",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "8.5.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
