feat: logOut function
Funcionalidade de fazer logOut da aplicação removendo o token do localStorage
Barra de navegação adicionada

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -26,8 +26,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
-.env*.local
+# ARQUIVOS ".env" não foram adicionados ao ".gitignore" somente para exemplificação e didática do projeto, assim não será necessário adicionar manualmente quem vier a fazer o clone do repositório
+# .env
+# .env*.local
 
 # vercel
 .vercel
